# Bicep-Testing

./: Dockerfile  README.md  deploy.sh  pyproject.toml
